fix(feature): calculate cps in an accurate way